kube/deploy/apps/radicale/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app radicale
  namespace: *app
spec:
  endpointSelector: {}
  egress:
    - toCIDRSet:
        - cidr: "10.88.88.0/30"
